# DevHaskell2023

./: CHANGELOG.md  DevHaskell2023.cabal  LICENSE  README.md
.github/workflows/: haskell.yml
